--- a/ServiceDesk/Gateway/Areas/Identity/Pages/Account/Login.cshtml
+++ b/ServiceDesk/Gateway/Areas/Identity/Pages/Account/Login.cshtml
@@ -1,4 +1,4 @@
-﻿@model Gateway.Models.LoginModel // Upewnij się, że odpowiedni namespace jest ustawiony
+﻿@model Gateway.Models.LoginModel 
 @{
     ViewData["Title"] = "Log in";
 }
