--- a/ServiceDesk/Gateway/Areas/Identity/Pages/Account/Register.cshtml
+++ b/ServiceDesk/Gateway/Areas/Identity/Pages/Account/Register.cshtml
@@ -1,4 +1,5 @@
-﻿@model Gateway.Models.RegisterModel
+﻿
+@model Gateway.Models.RegisterModel
 @{
     ViewData["Title"] = "Register";
 }
@@ -7,16 +8,10 @@
 
 <div class="row">
     <div class="col-md-4">
-        <form id="registerForm" asp-action="Register" method="post">
+        <form asp-controller="Auth" asp-action="Register" method="post">
             <h2>Create a new account.</h2>
             <hr />
             <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
-
-            <div class="form-floating mb-3">
-                <input asp-for="Name" class="form-control" aria-required="true" placeholder="John Doe" />
-                <label asp-for="Name">Name</label>
-                <span asp-validation-for="Name" class="text-danger"></span>
-            </div>
 
             <div class="form-floating mb-3">
                 <input asp-for="Email" class="form-control" autocomplete="username" aria-required="true" placeholder="name@example.com" />
