--- a/ServiceDesk/Gateway/Views/Assets/GenericDetails.cshtml
+++ b/ServiceDesk/Gateway/Views/Assets/GenericDetails.cshtml
@@ -13,7 +13,9 @@
                     <dd class="col-sm-9">@property.GetValue(Model)</dd>
                 }
             </dl>
-            <a asp-action="Index" class="btn btn-secondary">Back to List</a>
+            <a asp-action="@Model.Discriminator" asp-controller="Assets" class="btn btn-secondary">Back to List</a>
+            <a asp-action="Edit" asp-route-type="@Model.Discriminator" asp-route-id="@Model.Guid" class="btn btn-primary btn-sm">Edit</a>
+            <a asp-action="Delete" asp-route-type="@Model.Discriminator" asp-route-id="@Model.Guid" class="btn btn-danger btn-sm">Delete</a>
         </div>
     </div>
 </div>
