--- a/ServiceDesk/Gateway/Views/Shared/_Layout.cshtml
+++ b/ServiceDesk/Gateway/Views/Shared/_Layout.cshtml
@@ -56,6 +56,19 @@
                                     </div>
                                     Cables
                                 </a>
+                                <a class="dropdown-item" asp-area="" asp-controller="Assets" asp-action="Phone">
+                                    <div class="container mt-5">
+                                        @*    <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 64 64" enable-background="new 0 0 64 64" xml:space="preserve" width="64px" height="64px">
+                                        <g>
+                                        <rect x="8" y="12" width="48" height="32" fill="#ccc" stroke="#000" stroke-width="2" />
+                                        <rect x="10" y="14" width="44" height="28" fill="#fff" />
+                                        <rect x="22" y="44" width="20" height="4" fill="#000" />
+                                        <rect x="28" y="48" width="8" height="2" fill="#000" />
+                                        </g>
+                                        </svg> *@
+                                    </div>
+                                    Phones
+                                </a>
                                 @* <a class="dropdown-item" asp-area="" asp-controller="Assets" asp-action="Create">Add New Asset</a> *@
                                 <!-- Add more dropdown items as needed -->
                             </div>
