Added user service and change language to polish

--- a/ServiceDesk/Gateway/Views/Shared/_Layout.cshtml
+++ b/ServiceDesk/Gateway/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Gateway</title>
+    <title>@ViewData["Title"] - Brama</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Gateway.styles.css" asp-append-version="true" />
@@ -12,7 +12,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Gateway</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Brama</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -20,17 +20,20 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Strona główna</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Prywatność</a>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="AdministratorIndex">Lista użytkowników</a>
+                        </li>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Ticket" asp-action="Index">Mail</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Ticket" asp-action="Index">Maile</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle text-dark" href="#" id="assetsDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                Assety
+                                Zasoby
                             </a>
                             <div class="dropdown-menu" aria-labelledby="assetsDropdown">
                                 <a class="dropdown-item" asp-area="" asp-controller="Assets" asp-action="Computers">
@@ -44,7 +47,7 @@
                                         </g>
                                     </svg> *@
                                     </div>
-                                    Computers
+                                    Komputery
                                 </a>
                                 <a class="dropdown-item" asp-area="" asp-controller="Assets" asp-action="Cables">
                                     <div class="container mt-5">
@@ -57,47 +60,47 @@
                                         </g>
                                         </svg> *@
                                     </div>
-                                    Cables
+                                    Kable
                                 </a>
                                 <a class="dropdown-item" asp-area="" asp-controller="Assets" asp-action="Phone">
                                     <div class="container mt-5">
                                     </div>
-                                    Phones
+                                    Telefony
                                 </a>
                                 <a class="dropdown-item" asp-area="" asp-controller="Assets" asp-action="Device">
                                     <div class="container mt-5">
                                     </div>
-                                    Devices
+                                    Urządzenia
                                 </a>
                                 <a class="dropdown-item" asp-area="" asp-controller="Assets" asp-action="Rack">
                                     <div class="container mt-5">
                                     </div>
-                                    Racks
+                                    Szafy rakowe
                                 </a>
                                 <a class="dropdown-item" asp-area="" asp-controller="Assets" asp-action="PDU">
                                     <div class="container mt-5">
                                     </div>
-                                    PDUs
+                                    Listwy zasilające
                                 </a>
                                 <a class="dropdown-item" asp-area="" asp-controller="Assets" asp-action="Printer">
                                     <div class="container mt-5">
                                     </div>
-                                    Printers
+                                    Drukarki
                                 </a>
                                 <a class="dropdown-item" asp-area="" asp-controller="Assets" asp-action="Monitor">
                                     <div class="container mt-5">
                                     </div>
-                                    Monitors
+                                    Monitory
                                 </a>
                                 <a class="dropdown-item" asp-area="" asp-controller="Assets" asp-action="Simcard">
                                     <div class="container mt-5">
                                     </div>
-                                    Simcards
+                                    Karty SIM
                                 </a>
                                 <a class="dropdown-item" asp-area="" asp-controller="Assets" asp-action="Software">
                                     <div class="container mt-5">
                                     </div>
-                                    Software
+                                    Oprogramowanie
                                 </a>
 
                                 @* <a class="dropdown-item" asp-area="" asp-controller="Assets" asp-action="Create">Add New Asset</a> *@
@@ -118,7 +121,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2024 - Gateway - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2024 - Brama - <a asp-area="" asp-controller="Home" asp-action="Privacy">Prywatność</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
