--- a/ServiceDesk/Gateway/Areas/Identity/Pages/Account/Login.cshtml
+++ b/ServiceDesk/Gateway/Areas/Identity/Pages/Account/Login.cshtml
@@ -1,7 +1,7 @@
 ﻿﻿
 @model Gateway.Models.LoginModel 
 @{
-    ViewData["Title"] = "Log in";
+    ViewData["Title"] = "Logowanie";
 }
 
 <h1>@ViewData["Title"]</h1>
@@ -9,7 +9,7 @@
     <div class="col-md-4">
         <section>
             <form id="account" method="post" asp-controller="Auth" asp-action="Login">
-                <h2>Use a local account to log in.</h2>
+                <h2>Wpisz dane aby się zalogować</h2>
                 <hr />
                 <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
                 <div class="form-floating mb-3">
@@ -18,12 +18,12 @@
                     <span asp-validation-for="Email" class="text-danger"></span>
                 </div>
                 <div class="form-floating mb-3">
-                    <input asp-for="Password" class="form-control" autocomplete="current-password" aria-required="true" placeholder="password" />
-                    <label asp-for="Password" class="form-label">Password</label>
+                    <input asp-for="Password" class="form-control" autocomplete="current-password" aria-required="true" placeholder="hasło" />
+                    <label asp-for="Password" class="form-label">Hasło</label>
                     <span asp-validation-for="Password" class="text-danger"></span>
                 </div>
                 <div>
-                    <button id="login-submit" type="submit" class="w-100 btn btn-lg btn-primary">Log in</button>
+                    <button id="login-submit" type="submit" class="w-100 btn btn-lg btn-primary">Zaloguj</button>
                 </div>
             </form>
         </section>
