--- a/ServiceDesk/Gateway/Areas/Identity/Pages/Account/Register.cshtml
+++ b/ServiceDesk/Gateway/Areas/Identity/Pages/Account/Register.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @model Gateway.Models.RegisterModel
 @{
-    ViewData["Title"] = "Register";
+    ViewData["Title"] = "Rejestracja";
 }
 
 <h1>@ViewData["Title"]</h1>
@@ -9,7 +9,7 @@
 <div class="row">
     <div class="col-md-4">
         <form asp-controller="Auth" asp-action="Register" method="post">
-            <h2>Create a new account.</h2>
+            <h2>Stwórz nowe konto.</h2>
             <hr />
             <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
 
@@ -21,29 +21,29 @@
 
             <div class="form-floating mb-3">
                 <input asp-for="PhoneNumber" class="form-control" aria-required="true" placeholder="+1234567890" />
-                <label asp-for="PhoneNumber">Phone Number</label>
+                <label asp-for="PhoneNumber">Numer telefonu</label>
                 <span asp-validation-for="PhoneNumber" class="text-danger"></span>
             </div>
 
             <div class="form-floating mb-3">
                 <input asp-for="UserName" class="form-control" aria-required="true" placeholder="username" />
-                <label asp-for="UserName">Username</label>
+                <label asp-for="UserName">Nazwa użytkownika</label>
                 <span asp-validation-for="UserName" class="text-danger"></span>
             </div>
 
             <div class="form-floating mb-3">
                 <input asp-for="Password" class="form-control" autocomplete="new-password" aria-required="true" placeholder="password" />
-                <label asp-for="Password">Password</label>
+                <label asp-for="Password">Hasło</label>
                 <span asp-validation-for="Password" class="text-danger"></span>
             </div>
 
             <div class="form-floating mb-3">
                 <input asp-for="ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" placeholder="password" />
-                <label asp-for="ConfirmPassword">Confirm Password</label>
+                <label asp-for="ConfirmPassword">Potwierdź hasło</label>
                 <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
             </div>
 
-            <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
+            <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Zarejestruj</button>
         </form>
     </div>
 </div>
