--- a/ServiceDesk/Gateway/Views/Home/Index.cshtml
+++ b/ServiceDesk/Gateway/Views/Home/Index.cshtml
@@ -1,8 +1,8 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Strona startowa";
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Witaj</h1>
+    <p>Poczytaj o <a href="https://learn.microsoft.com/aspnet/core">Budowanie aplikacji webowej z asp.net core</a>.</p>
 </div>
