--- a/ServiceDesk/Gateway/Views/Shared/_LoginPartial.cshtml
+++ b/ServiceDesk/Gateway/Views/Shared/_LoginPartial.cshtml
@@ -7,21 +7,21 @@
     @if (User.Identity.IsAuthenticated)
     {
         <li class="nav-item">
-            <a id="manage" class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
+            <a id="manage" class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Witaj @UserManager.GetUserName(User)!</a>
         </li>
         <li class="nav-item">
             <form id="logoutForm" class="form-inline" asp-controller="Auth" asp-action="Logout">
-                <button id="logout" type="submit" class="nav-link btn btn-link text-dark border-0">Logout</button>
+                <button id="logout" type="submit" class="nav-link btn btn-link text-dark border-0">Wyloguj się</button>
             </form>
         </li>
     }
     else
     {
         <li class="nav-item">
-            <a class="nav-link text-dark" id="register" asp-area="" asp-controller="Auth" asp-action="RegisterView">Register</a>
+            <a class="nav-link text-dark" id="register" asp-area="" asp-controller="Auth" asp-action="RegisterView">Zarejestruj się</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link text-dark" id="login" asp-area="" asp-controller="Auth" asp-action="LoginView">Login</a>
+            <a class="nav-link text-dark" id="login" asp-area="" asp-controller="Auth" asp-action="LoginView">Zaloguj się</a>
         </li>
     }
 </ul>
