--- a/ServiceDesk/Gateway/Views/User/AdministratorIndex.cshtml
+++ b/ServiceDesk/Gateway/Views/User/AdministratorIndex.cshtml
@@ -1,8 +1,54 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@model List<Gateway.Models.UserViewModel>
+
 @{
-    ViewData["Title"] = "Administrator";
+    ViewBag.Title = "Lista użytkowników";
 }
 
-<h1>I am Administrator</h1>
+<h2>Lista użytkowników</h2>
+
+<table class="table">
+    <thead>
+        <tr>
+            <th>ID</th>
+            <th>Nazwa użytkownika</th>
+            <th>Email</th>
+            <th>Rola</th>
+            <th>Akcja</th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var user in Model)
+        {
+            <tr>
+                <td>@user.Id</td>
+                <td>@user.UserName</td>
+                <td>@user.Email</td>
+                <td>
+                    @if (user.Roles.Contains("Customer"))
+                    {
+                        <text>Klient</text>
+                    }
+                    else if (user.Roles.Contains("Serviceman"))
+                    {
+                        <text>Serwisant</text>
+                    }
+                    else if (user.Roles.Contains("Administrator"))
+                    {
+                        <text>Administrator</text>
+                    }
+                    else
+                    {
+                        @string.Join(", ", user.Roles)
+                    }
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@user.Id" class="btn btn-primary">Edytuj</a>
+                    <form asp-action="Delete" asp-route-id="@user.Id" method="post" style="display:inline;">
+                        <button type="submit" class="btn btn-danger">Usuń</button>
+                        </form>
+                    <a asp-action="ChangeRole" asp-route-id="@user.Id" class="btn btn-secondary">Zmień role</a>
+                </td>
+            </tr>
+        }
+    </tbody>
+</table>
