--- a/ServiceDesk/Gateway/Views/User/CustomerIndex.cshtml
+++ b/ServiceDesk/Gateway/Views/User/CustomerIndex.cshtml
@@ -2,7 +2,7 @@
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
-    ViewData["Title"] = "Custoemr";
+    ViewData["Title"] = "Klient";
 }
 
-<h1>I am Customer</h1>
+<h1>Jestem klientem</h1>
