--- a/ServiceDesk/Gateway/Views/Shared/_Layout.cshtml
+++ b/ServiceDesk/Gateway/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
                         </li>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Ticket" asp-action="Index">Maile</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Ticket" asp-action="Index">Zgłoszenia</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle text-dark" href="#" id="assetsDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
