--- a/ServiceDesk/Gateway/Views/Assets/GenericView.cshtml
+++ b/ServiceDesk/Gateway/Views/Assets/GenericView.cshtml
@@ -1,30 +1,36 @@
 ﻿@model IEnumerable<dynamic>
 
 <div class="container">
-<h1 class="text-center mb-4">Assets</h1>
-    <table class="table table-striped table-hover">
-        <thead class="thead-dark">
-            <tr>
-                @foreach (var property in Model.First().GetType().GetProperties())
-                {
-                    <th>@property.Name</th>
-                }
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var item in Model)
-            {
+    <h1 class="text-center mb-4">Assets</h1>
+    @if (Model != null && Model.Any())
+    {
+        <table class="table table-striped table-hover">
+            <thead class="thead-dark">
                 <tr>
-                    @foreach (var property in item.GetType().GetProperties())
+                    @foreach (var property in Model.First().GetType().GetProperties())
                     {
-                        <td>@property.GetValue(item)</td>
+                        <th>@property.Name</th>
                     }
-                    <td>
-                        <a asp-action="Details" asp-route-type="@item.Discriminator" asp-route-id="@item.Guid" class="btn btn-info btn-sm">Details</a>
-                        
-                    </td>
                 </tr>
-            }
-        </tbody>
-    </table>
+            </thead>
+            <tbody>
+                @foreach (var item in Model)
+                {
+                    <tr>
+                        @foreach (var property in item.GetType().GetProperties())
+                        {
+                            <td>@property.GetValue(item)</td>
+                        }
+                        <td>
+                            <a asp-action="Details" asp-route-type="@item.Discriminator" asp-route-id="@item.Guid" class="btn btn-info btn-sm">Details</a>
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    }
+    else
+    {
+        <p class="text-center">No assets available.</p>
+    }
 </div>
