--- a/ServiceDesk/Gateway/wwwroot/css/site.css
+++ b/ServiceDesk/Gateway/wwwroot/css/site.css
@@ -1,22 +1,82 @@
-html {
-  font-size: 14px;
-}
-
-@media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
-}
-
-.btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
-  box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
-}
-
-html {
-  position: relative;
-  min-height: 100%;
+html, body {
+    height: 100%;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
 }
 
 body {
-  margin-bottom: 60px;
+    display: flex;
+    flex-direction: column;
+    background-size: cover;
+    color: black;
+}
+
+.container-fluid, .container {
+    flex: 1;
+}
+
+.footer {
+    flex-shrink: 0;
+}
+
+body.index-page {
+    background: url('https://images.unsplash.com/photo-1483058712412-4245e9b90334?q=80&w=1740&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D') no-repeat center center fixed;
+    background-size: cover;
+    color: white;
+}
+
+.index-page .hero-section,
+.index-page .card-body {
+    background: rgba(255, 255, 255, 0.4);
+    backdrop-filter: blur(10px);
+    border-radius: 15px;
+    color: black;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.index-page .hero-section {
+    margin-top: 100px;
+    padding: 50px 0;
+}
+
+    .index-page .hero-section h1 {
+        font-size: 4rem;
+    }
+
+    .index-page .hero-section p {
+        font-size: 1.5rem;
+    }
+
+.index-page .card-body {
+    padding: 20px;
+}
+
+.index-page .card-img-top {
+    border-radius: 15px;
+}
+
+.index-page .container.mt-5.pt-5 {
+    margin-top: 150px;
+    padding-top: 50px;
+}
+
+.index-page .card {
+    margin-bottom: 40px;
+}
+
+.index-page .card-title {
+    font-size: 1.5rem;
+}
+
+.index-page .card-text {
+    font-size: 1rem;
+}
+
+.index-page .btn-primary {
+    margin-top: 10px;
+}
+
+.t-b {
+    color: black;
 }
