--- a/ServiceDesk/Gateway/Views/Assets/GenericUpdate.cshtml
+++ b/ServiceDesk/Gateway/Views/Assets/GenericUpdate.cshtml
@@ -27,8 +27,8 @@
                         </div>
                     }
                 }
-                <button type="submit" class="btn btn-primary">Save</button>
-                <a asp-action="@Model.Discriminator" asp-controller="Assets" class="btn btn-secondary">Back to List</a>
+                <button type="submit" class="btn btn-primary">Zapisz</button>
+                <a asp-action="@Model.Discriminator" asp-controller="Assets" class="btn btn-secondary">Cofnij</a>
             </form>
         </div>
     </div>
