--- a/ServiceDesk/Gateway/Areas/Identity/Pages/Account/Register.cshtml
+++ b/ServiceDesk/Gateway/Areas/Identity/Pages/Account/Register.cshtml
@@ -6,48 +6,54 @@
 
 <h1>@ViewData["Title"]</h1>
 
-<div class="row">
-    <div class="col-md-4">
-        <form asp-controller="Auth" asp-action="Register" method="post">
-            <h2>Stwórz nowe konto.</h2>
-            <hr />
-            <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
+ <div class="container d-flex align-items-center justify-content-center vh-100">
+    <div class="row">
+        <div class="col-md-8 col-lg-6 col-xl-4">
+            <div class="card shadow-lg rounded-3">
+                <div class="card-body p-4">
+                    <h2 class="card-title text-center mb-4">Stwórz nowe konto</h2>
+                    <form asp-controller="Auth" asp-action="Register" method="post">
+                        <div asp-validation-summary="ModelOnly" class="text-danger mb-3" role="alert"></div>
 
-            <div class="form-floating mb-3">
-                <input asp-for="Email" class="form-control" autocomplete="username" aria-required="true" placeholder="name@example.com" />
-                <label asp-for="Email">Email</label>
-                <span asp-validation-for="Email" class="text-danger"></span>
+                        <div class="form-floating mb-3">
+                            <input asp-for="Email" class="form-control" autocomplete="username" aria-required="true" placeholder="name@example.com" />
+                            <label asp-for="Email" class="form-label">Email</label>
+                            <span asp-validation-for="Email" class="text-danger"></span>
+                        </div>
+
+                        <div class="form-floating mb-3">
+                            <input asp-for="PhoneNumber" class="form-control" aria-required="true" placeholder="+1234567890" />
+                            <label asp-for="PhoneNumber" class="form-label">Numer telefonu</label>
+                            <span asp-validation-for="PhoneNumber" class="text-danger"></span>
+                        </div>
+
+                        <div class="form-floating mb-3">
+                            <input asp-for="UserName" class="form-control" aria-required="true" placeholder="username" />
+                            <label asp-for="UserName" class="form-label">Nazwa użytkownika</label>
+                            <span asp-validation-for="UserName" class="text-danger"></span>
+                        </div>
+
+                        <div class="form-floating mb-3">
+                            <input asp-for="Password" class="form-control" type="password" autocomplete="new-password" aria-required="true" placeholder="password" />
+                            <label asp-for="Password" class="form-label">Hasło</label>
+                            <span asp-validation-for="Password" class="text-danger"></span>
+                        </div>
+
+                        <div class="form-floating mb-3">
+                            <input asp-for="ConfirmPassword" class="form-control" type="password" autocomplete="new-password" aria-required="true" placeholder="password" />
+                            <label asp-for="ConfirmPassword" class="form-label">Potwierdź hasło</label>
+                            <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
+                        </div>
+
+                        <div class="d-grid">
+                            <button id="registerSubmit" type="submit" class="btn btn-primary btn-lg">Zarejestruj</button>
+                        </div>
+                    </form>
+                </div>
             </div>
-
-            <div class="form-floating mb-3">
-                <input asp-for="PhoneNumber" class="form-control" aria-required="true" placeholder="+1234567890" />
-                <label asp-for="PhoneNumber">Numer telefonu</label>
-                <span asp-validation-for="PhoneNumber" class="text-danger"></span>
-            </div>
-
-            <div class="form-floating mb-3">
-                <input asp-for="UserName" class="form-control" aria-required="true" placeholder="username" />
-                <label asp-for="UserName">Nazwa użytkownika</label>
-                <span asp-validation-for="UserName" class="text-danger"></span>
-            </div>
-
-            <div class="form-floating mb-3">
-                <input asp-for="Password" class="form-control" autocomplete="new-password" aria-required="true" placeholder="password" />
-                <label asp-for="Password">Hasło</label>
-                <span asp-validation-for="Password" class="text-danger"></span>
-            </div>
-
-            <div class="form-floating mb-3">
-                <input asp-for="ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" placeholder="password" />
-                <label asp-for="ConfirmPassword">Potwierdź hasło</label>
-                <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
-            </div>
-
-            <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Zarejestruj</button>
-        </form>
+        </div>
     </div>
 </div>
-
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
 }
