--- a/ServiceDesk/Gateway/Views/Assets/GenericDetails.cshtml
+++ b/ServiceDesk/Gateway/Views/Assets/GenericDetails.cshtml
@@ -3,7 +3,7 @@
 <div class="container mt-4">
     <div class="card">
         <div class="card-header bg-primary text-white">
-            <h4 class="mb-0">Details</h4>
+            <h4 class="mb-0">Szczegóły</h4>
         </div>
         <div class="card-body">
             <dl class="row">
@@ -13,9 +13,9 @@
                     <dd class="col-sm-9">@property.GetValue(Model)</dd>
                 }
             </dl>
-            <a asp-action="@Model.Discriminator" asp-controller="Assets" class="btn btn-secondary">Back to List</a>
-            <a asp-action="Edit" asp-route-type="@Model.Discriminator" asp-route-id="@Model.Guid" class="btn btn-primary btn-sm">Edit</a>
-            <a asp-action="Delete" asp-route-type="@Model.Discriminator" asp-route-id="@Model.Guid" class="btn btn-danger btn-sm">Delete</a>
+            <a asp-action="@Model.Discriminator" asp-controller="Assets" class="btn btn-secondary">Cofnij</a>
+            <a asp-action="Edit" asp-route-type="@Model.Discriminator" asp-route-id="@Model.Guid" class="btn btn-primary btn-sm">Edytuj</a>
+            <a asp-action="Delete" asp-route-type="@Model.Discriminator" asp-route-id="@Model.Guid" class="btn btn-danger btn-sm">Usuń</a>
         </div>
     </div>
 </div>
