--- a/ServiceDesk/Gateway/Views/Assets/GenericView.cshtml
+++ b/ServiceDesk/Gateway/Views/Assets/GenericView.cshtml
@@ -1,33 +1,52 @@
 ﻿@model IEnumerable<dynamic>
-
+@using Gateway.Helpers
 <div class="container">
     <h1 class="text-center mb-4">Assets</h1>
     @if (Model != null && Model.Any())
     {
-        <table class="table table-striped table-hover">
-            <thead class="thead-dark">
-                <tr>
-                    @foreach (var property in Model.First().GetType().GetProperties())
-                    {
-                        <th>@property.Name</th>
-                    }
-                </tr>
-            </thead>
-            <tbody>
-                @foreach (var item in Model)
-                {
+        var excludedProperties = new List<string> { "Id", "Guid", "CreatedAt", "UpdatedAt", "CreatedBy", "UpdatedBy" };
+        var modelType = Model.First().GetType();
+
+        <div class="table-container">
+            <table class="table table-striped table-hover">
+                <thead class="thead-dark">
                     <tr>
-                        @foreach (var property in item.GetType().GetProperties())
+                        @foreach (var property in Model.First().GetType().GetProperties())
                         {
-                            <td>@property.GetValue(item)</td>
+                            @if (!excludedProperties.Contains(property.Name))
+                            {
+                                <th>@DisplayNameHelper.GetDisplayName(modelType, property.Name)</th>
+                            }
                         }
-                        <td>
-                            <a asp-action="Details" asp-route-type="@item.Discriminator" asp-route-id="@item.Guid" class="btn btn-info btn-sm">Details</a>
-                        </td>
                     </tr>
-                }
-            </tbody>
-        </table>
+                </thead>
+                <tbody>
+                    @foreach (var item in Model)
+                    {
+                        <tr>
+                            @foreach (var property in item.GetType().GetProperties())
+                            {
+                                @if (!excludedProperties.Contains(property.Name))
+                                {
+                                    <td>@property.GetValue(item)</td>
+                                }
+                            }
+
+                            <td>
+                                @if (!string.IsNullOrEmpty(item.Discriminator))
+                                {
+                                    <a asp-action="Details" asp-route-type="@item.Discriminator" asp-route-id="@item.Guid" class="btn btn-info btn-sm">Szczegóły</a>
+                                }
+                                else
+                                {
+                                    <a asp-action="Details" asp-route-id="@item.Guid" class="btn btn-info btn-sm">Szczegóły</a>
+                                }
+                            </td>       
+                        </tr>
+                    }
+                </tbody>
+            </table>
+        </div>
     }
     else
     {
