--- a/ServiceDesk/Gateway/Views/Ticket/Index.cshtml
+++ b/ServiceDesk/Gateway/Views/Ticket/Index.cshtml
@@ -1,31 +1,59 @@
 ﻿@model IEnumerable<Gateway.Storage.Dtos.TicketDto>
 
 @{
-    ViewData["Title"] = "Ticket List";
+    ViewData["Title"] = "Index";
 }
 
-<h2>Ticket List</h2>
+<h1>Index</h1>
 
+<p>
+    <a asp-action="Create">Create New</a>
+</p>
 <table class="table">
     <thead>
         <tr>
-            <th>Title</th>
-            <th>Status</th>
-            <th>Priority</th>
-            <th>Requester</th>
-            <th>Assignee</th>
+            <th>
+                @Html.DisplayNameFor(model => model.Title)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.StatusName)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.PriorityName)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Requester)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Assignee)
+            </th>
+            <th></th>
         </tr>
     </thead>
     <tbody>
-        @foreach (var ticket in Model)
-        {
-            <tr>
-                <td>@ticket.Title</td>
-                <td>@ticket.StatusName</td>
-                <td>@ticket.PriorityName</td>
-                <td>@ticket.Requester</td>
-                <td>@ticket.Assignee</td>
-            </tr>
-        }
+@foreach (var item in Model) {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Title)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.StatusName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.PriorityName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Requester)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Assignee)
+            </td>
+            <td>
+                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+            </td>
+        </tr>
+}
     </tbody>
 </table>
