--- a/ServiceDesk/Gateway/Views/Ticket/ChangePriority.cshtml
+++ b/ServiceDesk/Gateway/Views/Ticket/ChangePriority.cshtml
@@ -1,7 +1,7 @@
-﻿@model Gateway.Storage.Dtos.StatusTicketDto
+﻿@model Gateway.Storage.Dtos.PriorityTicketDto
 
 @{
-    ViewData["Title"] = "ChangeStatus";
+    ViewData["Title"] = "ChangePriority";
 }
 
 <h1>ChangeStatus</h1>
@@ -9,14 +9,16 @@
 <h4>StatusTicketDto</h4>
 
 <div class="col-md-4">
-    <form asp-action="ChangeStatus">
+    <form asp-action="ChangePriority">
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
         <div class="form-group">
             <label asp-for="Name" class="control-label"></label>
             <select asp-for="Name" class="form-control">
-                <option value="New">New</option>
-                <option value="InProgress">In Progress</option>
-                <option value="Resolved">Resolved</option>
+                <option value="Low">Low</option>
+                <option value="Medium">Medium</option>
+                <option value="High">High</option>
+                <option value="Urgent">Urgent</option>
+
             </select>
             <span asp-validation-for="Name" class="text-danger"></span>
         </div>
@@ -31,5 +33,7 @@
 
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
