--- a/ServiceDesk/EmailNotification/Templates/ticketClosed.html
+++ b/ServiceDesk/EmailNotification/Templates/ticketClosed.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Potwierdzenie Zamknięcia Zgłoszenia</title>
+    <title>Potwierdzenie Rozwiązania Zgłoszenia</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -49,13 +49,13 @@
 </head>
 <body>
     <div class="container">
-        <h1>Potwierdzenie Zamknięcia Zgłoszenia</h1>
+        <h1>Potwierdzenie Rozwiązania Zgłoszenia</h1>
         <p>Dzień dobry, [Imię Klienta],</p>
-        <p>Chcielibyśmy poinformować, że Twoje zgłoszenie zostało zamknięte. Dziękujemy za zgłoszenie i współpracę w trakcie rozwiązywania problemu.</p>
+        <p>Chcielibyśmy poinformować, że Twoje zgłoszenie zostało rozwiązane. Dziękujemy za zgłoszenie i współpracę w trakcie rozwiązywania problemu.</p>
         <div class="details">
             <p><strong>Szczegóły zgłoszenia:</strong></p>
             <p><strong>Numer Zgłoszenia:</strong> [Numer Zgłoszenia]</p>
-            <p><strong>Data Zamknięcia:</strong> [data]</p>
+            <p><strong>Data Rozwiązania:</strong> [data]</p>
             <p><strong>Krótki Opis:</strong> [krótki opis rozwiązania]</p>
         </div>
 
